tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_literal.fg
/; EXPECT_ERROR: AssignmentToNonLValue
var x:int = 10
print(x, "\n")
5 = x

